--- a/css/styles.css
+++ b/css/styles.css
@@ -171,3 +171,24 @@ body
    justify-content: center;
    align-items: center;
 }
+
+@media screen and (min-width: 320px)
+{
+   .title-principal 
+   {
+      font-size: 36px;
+      margin: 30px auto;
+   }
+
+   .container 
+   {
+      width: 90%;
+      grid-template-columns: repeat(2, 1fr);
+   }
+
+   .item__img 
+   {
+      width: 100%;
+      height: 230px;
+   }
+}
