--- a/css/styles.css
+++ b/css/styles.css
@@ -208,10 +208,12 @@ body
    {
       font-size: 14px;
       padding: 16px 25px;
+      margin: 20px 10px;
    }
 
    .up 
    {
       right: unset;
+      margin-left: 10px
    }
 }
