--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,23 @@ body
    align-items: center;
 }
 
-@media screen and (min-width: 320px)
+@media screen and (min-width: 769px) and (max-width: 1000px)
+{
+   .container
+   {
+      grid-template-columns: repeat(3, 1fr);
+   }
+}
+
+@media screen and (min-width: 601px) and (max-width: 768px)
+{
+   .container
+   {
+      grid-template-columns: repeat(3, 1fr);
+   }
+}
+
+@media screen and (min-width: 320px) and (min-width: 320px)
 {
    .title-principal 
    {
