--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,12 @@ body
    {
       grid-template-columns: repeat(3, 1fr);
    }
+
+
+   .item__title 
+   {
+      font: 17px;
+   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 600px)
